c4prj2_input/grade.txt
Grading at Wed Mar 10 20:39:50 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:11:32: error: expected ‘;’ before ‘i’
     for (int i = 0 ; i < index i++){ 
                                ^
Compilation of future.c failed

Overall Grade: F
